Weekly clean-up

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-DESTINATION="/path/to/desired/destination/directory"
-SEPARATOR=" - "
-LOCATION_CN="the Lab <code>Q:</code> drive"
+QUEUE_DIR="/path/to/desired/queue/directory"
+QUEUE_NAME_SEPARATOR=" - "
+QUEUE_CN="the Lab <code>Q:</code> drive"
+QUEUE_WEEKLY_DIR="/path/to/desired/weekly/archive/directory"
