--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-QUEUE_DIR="/path/to/desired/queue/directory"
-QUEUE_NAME_SEPARATOR=" - "
-QUEUE_CN="the Lab <code>Q:</code> drive"
-QUEUE_WEEKLY_DIR="/path/to/desired/weekly/archive/directory"
+DB=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=labs
+DB_PASSWORD="s00p3Rs3Kr3T!"
+DB_DATABASE=labs
