Multiple file upload, announcements

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^3.4"
+        "vlucas/phpdotenv": "^3.4",
+        "ext-pdo": "*"
     },
     "scripts": {
         "post-install-cmd": [
